--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.20)
-project(agendaProject)
+project(agendaProject
+        VERSION 0.1
+        DESCRIPTION "Agenda compromissos"
+        HOMEPAGE_URL "https://github.com/gustahlucas/agendaProject")
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(agendaProject main.cpp agenda.cpp agenda.h)
+add_subdirectory(sources)
+add_subdirectory(standalone)
+
