alt: estrutura do projeto

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(agenda
-        agenda.h
-        agenda.cpp
-        )
-target_include_directories(agenda PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(agendalib
+        agenda/agenda.h
+        agenda/agenda.cpp
+        ../tests/unit_tests/ut_agenda.cpp)
+target_include_directories(agendalib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
