--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(agendaProject
         main.cpp
         )
-target_link_libraries(agendaProject PRIVATE agenda)
+target_link_libraries(agendaProject PRIVATE agendalib)
