--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(agendalib
+add_library(agenda
         agenda/agenda.h
         agenda/agenda.cpp
         ../tests/unit_tests/ut_agenda.cpp)
-target_include_directories(agendalib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(agenda PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
