--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -1,4 +1,2 @@
-add_executable(agendaProject
-        main.cpp
-        )
-target_link_libraries(agendaProject PRIVATE agendalib)
+add_executable(agendaProject main.cpp)
+target_link_libraries(agendaProject PRIVATE agenda)
