add: container adapter - queue

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(agenda
         agenda/agenda.h
         agenda/agenda.cpp
-        ../tests/unit_tests/ut_agenda.cpp)
+        ../tests/unit_tests/ut_agenda.cpp user/user.cpp user/user.h)
 target_include_directories(agenda PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
