--- a/cmake-build-debug-mingw/agendaProject.cbp
+++ b/cmake-build-debug-mingw/agendaProject.cbp
@@ -142,6 +142,12 @@
 		<Unit filename="D:/Code/progAvan/agendaProject/sources/compromisso/compromisso.hpp">
 			<Option target="agenda"/>
 		</Unit>
+		<Unit filename="D:/Code/progAvan/agendaProject/sources/menu/menu.cpp">
+			<Option target="agenda"/>
+		</Unit>
+		<Unit filename="D:/Code/progAvan/agendaProject/sources/menu/menu.hpp">
+			<Option target="agenda"/>
+		</Unit>
 		<Unit filename="D:/Code/progAvan/agendaProject/sources/user/user.cpp">
 			<Option target="agenda"/>
 		</Unit>
